--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/design-svg.svg" />
-    <link href="/styles.css" rel="stylesheet" />
+   <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Microsoft UI/UX Design Principles Project</title>
   </head>
